infra/mail/Manual/networkpolicy-allow-ingress-from-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-from-ingress-nginx
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app: mailpit
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8025
